[tool.poetry]
name = "fastapi-transformers"
version = "0.1.0"
description = ""
authors = ["weeken"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.21"
numpy = "^1.24.0"
fastapi = "^0.115.6"
httpx = "^0.28.1"
jinja2 = "^3.1.5"
uvicorn = "^0.34.0"
transformers = "^4.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
